새로운 stats페이지 생성중

--- a/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
@@ -285,20 +285,20 @@ body {
 }
 
 .btn-outline-secondary {
-	color: #686868;
-	border-color: #686868;
+	color: #0c4da2;
+	border-color: #0c4da2;
 }
 .btn-outline-secondary-all {
 	color: #fff;
-	background-color: #686868;
-	border-color: #686868;
+	background-color: #0c4da2;
+	border-color: #0c4da2;
 }
 
 
 .btn-outline-secondary:hover {
 	color: #fff;
-	background-color: #686868;
-	border-color: #686868;
+	background-color: #0c4da2;
+	border-color: #0c4da2;
 }
 
 .btn-outline-secondary:focus, .btn-outline-secondary.focus {
@@ -704,7 +704,7 @@ input.button {
     text-align: center;
 }
 button.button:hover{
-	border : 1px solid black;
+	border : 1px solid #0c4da2;
 }
 .article-list-paging__button {
     padding: 7px 7px 7px 16px;
@@ -832,7 +832,7 @@ li>a {
     display: block;
     position: absolute;
     right: 0;
-    bottom: 0;
+    bottom: 0; 
     margin-right: 6px;
     margin-bottom: 6px;
 }
@@ -908,6 +908,173 @@ button, input {
 
 #leftleft{
 	margin-left :  -33px;
+}
+
+
+/* stats_get.jsp */
+
+
+.ContentWrap>.Content{
+    margin: 10px auto 0;
+}
+
+
+
+.ContentWrap>.Content>.Box>.Content>#ChampionStatsTable>.GetTable{
+	width: 100%;
+    table-layout: fixed;
+}
+
+#ChampionStatsTable>.table{
+	border-collapse: collapse;
+    border-spacing: 0;
+}
+
+.GetTable>.Header {
+    display: table-header-group;
+    vertical-align: middle;
+    border-color: inherit;
+}
+
+.Row>.Rank{
+	text-align: center;
+}
+
+.Row>.Cell>.Progress.Blue{
+	background-color: #1f8ecd;
+    border-color: #1a78ae;
+	
+}
+.Row>.Cell>.Progress {
+    display: inline-block;
+    max-width: 60%;
+    height: 8px;
+    border: 1px solid #b8bfbf;
+    background-color: #c3c8c8;
+}
+
+.GetTable td{
+	border-right:none;
+	border-top: 1px solid #d5d8d8;
+	
+}
+.Content>.Row>.Cell {
+    font-size: 12px;
+    color: #555e5e;
+}
+
+.google{
+	width: 100%;
+	position : absolute;
+	background: #f2f2f2;
+	padding-bottom: 70px;
+	box-shadow: 0 0 2px rgba(0,0,0,.12), 0 2px 4px rgba(0,0,0,.24);
+}
+
+.google-1{
+	
+    padding-bottom: 64px;
+    
+    background : #FFFFFF;
+}
+.sumerry{
+	
+}
+.google-content{
+	
+}
+.sumerry-google{
+	/*padding-bottom: 40px;
+    padding-top: 16px;*/
+}
+
+.first-text{
+    box-sizing: border-box;
+    max-width: 100%;
+    min-width: 0%;
+    padding: 32px 32px 0 42px;
+}
+.first-text-children{
+-webkit-box-align: start;
+    box-align: start;
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+}
+.hoho{
+    -webkit-box-align: start;
+    box-align: start;
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-orient: vertical;
+    box-orient: vertical;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    font-size: 20px;
+    line-height: 135%;
+    margin-bottom: 32px;
+    margin-right: 8px;
+    margin-top: 8px;
+    min-width: 0;
+}
+.what{
+	color: rgba(0,0,0,0.54);
+    font: 400 13px Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
+    padding-top: 8px;
+}
+.opacity{
+	margin-left: auto;
+	opacity: 50;
+}
+
+.shadow{
+	position:relative;
+	
+	width:100%;
+	
+	z-index:0;
+}
+.shadow:hover{
+	z-index:100;
+	margin: 0 auto;
+	width: 770px;
+	box-shadow : 0px 0px 8px;
+}
+
+.content-top{
+	position: relative;
+    margin: 0 auto;
+    /*width: 770px;*/
+}
+.top-top{
+	font-size :24px;
+	padding-bottom: 64px;
+    background: #FFFFFF;
+    box-sizing: border-box;
+    max-width: 100%;
+    min-width: 0%;
+    padding: 32px 32px 30px 42px;
+    border-top:1px solid #f2f2f2;
+    border-bottom:1px solid #f2f2f2;
+}
+.google-shadow{
+	margin: 0 auto;
+	box-shadow: 0 0 2px rgba(0,0,0,.12), 
+	0 2px 4px rgba(0,0,0,.24);
+	width: 770px;
+}
+.security{
+	box-sizing: border-box;
+    max-width: 100%;
+    min-width: 0%;
+    padding: 32px 32px 0 42px;
 }
 
 
