--- a/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
@@ -22,20 +22,42 @@ body {
     cursor: pointer;
 }
 .page-content .list-content .detail-list .tab-content #test li {
-    width: 390px;
-    text-align: center;
+    width: 391px;
+    /*text-align: center;*/
     background: #fff;
-    height: 200px;
+    height: 360px;
     display: flex;
     /*padding: 10px;*/
 }
-.page-content .list-content .detail-list .tab-content span {
+.page-content .list-content .detail-list .tab-content #test ul li a span {
 	display: block;
-    height: 50px;
-    padding: 10px;
+    height: 60px;
+    /*padding: 10px;*/
+    margin-bottom: -30px;
+    margin-top: 5px;
+    padding-left: 10px;
 }
+/*
+.page-content .list-content .detail-list .tab-content #test ul li a .ctgr_img {
+	width: 100%;
+    height: 250px;
+}*/
+.page-content .list-content .detail-list .tab-content #test ul li a img {
+	width: 391px;
+    height: 250px;
+    /*border-bottom: 1px solid #ddd;*/
+}
+.page-content .list-content .detail-list .tab-content #test ul li a img:hover {
+	filter: brightness(70%);
+}
+
+/*
+.page-content .list-content .detail-list .tab-content #test ul li a img:hover {
+	opacity:0;
+}*/
 .page-content .list-content .detail-list .tab-content #test ul:hover {
 	border: 1px solid #1428a0;
+	
 }
 .page-content .list-content .detail-list .tab-content #test span:nth-child(1) { 
 	color: red;
@@ -44,7 +66,7 @@ body {
     position: relative;
     font-size: 25px;
     padding: 3px 0 20px;
-    margin-bottom: 40px;
+    /*margin-bottom: 40px;*/
     margin-left: 15px;
 }
 .page-content .list-content .detail-list h2::after {    
@@ -59,8 +81,8 @@ body {
 .page-content .list-content .detail-list .tab-content {
 	/*position: relative;
     margin-bottom: 15px;
-    margin-left: 15px;*/
-    margin-top: -38px;
+    margin-left: 15px;
+    margin-top: -38px;*/
 }
 .page-content .list-content .detail-list .tab-content input[type=button]{ 
 	display: inline-block;
@@ -90,7 +112,7 @@ body {
 }*/
 
 .page-content .list-content .detail-list .tab-content #test a {
-	width: 100%;
+	/*width: 100%;*/
 }
 /*
 .page-content .list-content .detail-list .tab-content .paging{
@@ -104,7 +126,7 @@ body {
     display: inline-block;
     min-width: 40px;
     height: 40px;
-    margin: 0 -1px;
+    margin: 0 1px;
     /*padding: 0 5px;*/
     box-sizing: border-box;
     line-height: 40px;
@@ -136,10 +158,23 @@ body {
 .page-content .list-content .detail-list .tab-content .content {
 	display: inline-block;
 }
-.page-content .list-content .detail-list .tab-content .paging li a{
+
+.page-content .list-content .detail-list .tab-content .paging ul .page-item a {
 	color: #888;
 	display: inline-block;
     width: 100%;
+}
+.page-content .list-content .detail-list .tab-content .paging ul .page-item-move a {
+	transition: border .2s;
+    display: inline-block;
+    position: relative;
+    width: 40px;
+    height: 40px;
+    margin: 0 -1px;
+    box-sizing: border-box;
+    border: 1px solid #ebebeb;
+    vertical-align: top;
+    color: #888;
 }
 .page-content .list-content .detail-list .tab-content .paging ul .page-item a:hover{
 	background-color: #888;
@@ -147,9 +182,9 @@ body {
 	color: #fff;
 }
 .page-content .list-content .detail-list .tab-content .paging ul .page-item-move a:hover{
-	background-color: #888;
     cursor: pointer;
-	color: #888;
+	color: #000;
+	border: 1px solid #000;
 }
 
 .page-content .list-content .detail-list .tab-content .paging ul .page-item.active .page-link{
