--- a/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
@@ -104,8 +104,9 @@ body {
 }
 
 .container .fixed_box .header .header_inner .logo img {
-    width: 210px;
-    height: 80px;
+    width: 200px;
+    height: 45px;
+    margin-top: 15px;
     /* 임시 로고에 맞게 사이즈 조정 로고 확정 후 width, height 조정 혹은 이미지 크기가 정확하다면 항목 삭제 */
 }
 
