--- a/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
@@ -29,14 +29,18 @@ body {
     display: flex;
     /*padding: 10px;*/
 }
+/*
 .page-content .list-content .detail-list .tab-content #test ul li a span {
 	display: block;
     height: 60px;
-    /*padding: 10px;*/
+    /*padding: 10px;
     margin-bottom: -30px;
     margin-top: 5px;
+    
+    margin-bottom: -20px;
+    margin-top: 10px;
     padding-left: 10px;
-}
+}*/
 /*
 .page-content .list-content .detail-list .tab-content #test ul li a .ctgr_img {
 	width: 100%;
@@ -47,9 +51,10 @@ body {
     height: 250px;
     /*border-bottom: 1px solid #ddd;*/
 }
+/*
 .page-content .list-content .detail-list .tab-content #test ul li a img:hover {
 	filter: brightness(70%);
-}
+}*/
 
 /*
 .page-content .list-content .detail-list .tab-content #test ul li a img:hover {
@@ -57,10 +62,43 @@ body {
 }*/
 .page-content .list-content .detail-list .tab-content #test ul:hover {
 	border: 1px solid #1428a0;
-	
 }
-.page-content .list-content .detail-list .tab-content #test span:nth-child(1) { 
-	color: red;
+.page-content .list-content .detail-list .tab-content #test ul:hover img{
+	filter: brightness(70%);
+}
+.page-content .list-content .detail-list .tab-content #test ul li a span:nth-child(2) { 
+    display: block;
+    padding-top: 5px;
+    padding-left: 20px;
+    font-size: 20px;
+    font-weight: 700;
+    color: #222;
+}
+.page-content .list-content .detail-list .tab-content #test ul li a span:nth-child(3) { 
+	/*
+	display: block;
+    padding-left: 20px;
+    padding-top: 2px;
+    padding-right: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 392px;*/
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 2px;
+    line-height: 1.6;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.page-content .list-content .detail-list .tab-content #test ul li a span:nth-child(4) { 
+	display: block;
+    padding-left: 20px;
+    padding-top: 2px;
+    font-size: 14px;
+    color: #222;
 }
 .page-content .list-content .detail-list h2 {
     position: relative;
