--- a/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
@@ -22,10 +22,12 @@ body {
     cursor: pointer;
 }
 .page-content .list-content .detail-list .tab-content #test li {
-    width: 391px;
+    /*width: 391px;*/
+    width: 250px;
     /*text-align: center;*/
     background: #fff;
-    height: 360px;
+    /*height: 360px;*/
+    height: 310px;
     display: flex;
     /*padding: 10px;*/
 }
@@ -47,10 +49,36 @@ body {
     height: 250px;
 }*/
 .page-content .list-content .detail-list .tab-content #test ul li a img {
-	width: 391px;
-    height: 250px;
+	/* width: 391px;
+    height: 250px; */
+    width: 250.5px;
+    height: 200px;
     /*border-bottom: 1px solid #ddd;*/
 }
+.page-content .list-content .detail-list .tab-content #test ul li a .ctgr_img{
+    position:relative;
+}
+
+.page-content .list-content .detail-list .tab-content #test ul li a .ctgr_img p{
+    z-index: 100;
+    position: absolute;
+    color: #222;
+    /*font-size: 16px;*/
+    font-size: 14px;
+    font-weight: bold;
+    right: 10px;
+    padding-top: 5px;
+}
+/*
+.page-content .list-content .detail-list .tab-content #test ul li a .ctgr_img p{
+    z-index: 100;
+    position: absolute;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    left: 10px;
+    top: 0px;
+}*/
 /*
 .page-content .list-content .detail-list .tab-content #test ul li a img:hover {
 	filter: brightness(70%);
@@ -74,7 +102,7 @@ body {
     font-weight: 700;
     color: #222;
 }
-.page-content .list-content .detail-list .tab-content #test ul li a span:nth-child(3) { 
+.page-content .list-content .detail-list .tab-content #test ul li a .subj_nm span { 
 	/*
 	display: block;
     padding-left: 20px;
@@ -92,6 +120,7 @@ body {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    height: 50px;
 }
 .page-content .list-content .detail-list .tab-content #test ul li a span:nth-child(4) { 
 	display: block;
