--- a/2. 개발/FreSearch/src/main/webapp/resources/css/research.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/research.css
@@ -25,7 +25,9 @@ hr {
 	width: 430px;
 	margin: 0 auto;
 }
-
+.research_header .logo img{
+	width:400px;
+}
 #content {
 	clear: both;
 	float: none;
