--- a/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
@@ -154,7 +154,7 @@
 		padding: 1.5rem 1.875rem;
 	margin-left: 0rem;
 	margin-right: auto;
-	width: 100%;
+	width: 360px;
 	
 }
 
@@ -584,7 +584,7 @@ form {
 }
 
 .ButtonWrap {
-    height: 150px;
+    height: 152px;
     padding: 12px 20px 0;
     margin: -1px;
     overflow-y: auto;
@@ -1131,6 +1131,7 @@ button, input {
 }
 body{
 	background: #f4f4f4
+	font-size:16px;
 }
 .top-top{
     border-left: 3px solid #0C4DA2;
