로그인 시큐리티 사전작업

--- a/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
@@ -278,6 +278,9 @@ body {
     font-style: normal;
     color: #fff;
 }
+.page-content .list-content .detail-list .tab-content .paging ul .page-item.active .page-link:hover{
+	cursor: auto;
+}
 /*
 .page-content .list-content .detail-list .tab-content .tab-button a:visited {
 	background-color: #222;
