--- a/2. 개발/FreSearch/src/main/webapp/resources/css/reset.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/reset.css
@@ -10,8 +10,7 @@
     vertical-align: top;
 }
 
-body,
-p,
+c p,
 h1,
 h2,
 h3,
@@ -73,4 +72,10 @@ table {
     display: block;
     content: "";
     clear: both;
+}
+
+body {
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
 }
