설문지 등록 시 주관식,객관식 판별 및 등록 로직 완성 /  설문지 내용 기타 및 주관식 input 타입 판별 로직 완성

--- a/2. 개발/FreSearch/src/main/webapp/resources/css/research.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/research.css
@@ -39,7 +39,7 @@ hr {
 
 #content #form_area #remote {
 	background-color: #fff;
-	height: 208px;
+	height: 165px;
 	width: 50px;
 	display: inline-block;
 	position: absolute;
@@ -157,13 +157,49 @@ hr {
 	transition: all 0.5s;
 }
 
-#content input[type=text]:focus {
+#content .research_content>#qst_content{
+	width: 585px;
+	box-sizing: border-box;
+	padding: 15px;
+	margin-left: 20px;
+	border: none;
+	border-bottom: 1px solid #000;
+	font-size: 25px;
+	transition: all 0.5s;
+}
+
+select { 
+	width: 200px; /* 원하는 너비설정 */ 
+	padding: .8em .5em; /* 여백으로 높이 설정 */ 
+	margin:15px;
+	font-family: inherit; /* 폰트 상속 */ 
+	background: url('/resources/img/arrow.png') no-repeat 95% 50%; /* 네이티브 화살표 대체 */ 
+	border: 1px solid #999; 
+	border-radius: 0px; /* iOS 둥근모서리 제거 */ 
+	-webkit-appearance: none; /* 네이티브 외형 감추기 */ 
+	-moz-appearance: none; 
+	appearance: none; 
+	outline:none;
+}
+
+
+#content input[type=text]:focus,#content .research_content>#qst_content:focus {
 	border-bottom: 2px solid #1428a0;
 	outline: none;
 }
 
 #item_box {
 	padding: 10px 20px 10px 20px;
+}
+
+#item_box .item_individual .disabled {
+	background-color: #fff;
+}
+#item_box .item_individual > #disabled_sel {
+	width: 500px;
+	border-bottom: 1px solid #000;
+	background-color: #fff;
+	margin-bottom: 15px;
 }
 
 #item_box .item_individual>input[type=text] {
@@ -179,10 +215,8 @@ hr {
 	transition: all 0.5s;
 }
 #item_box .item_individual>input[type=radio]{
-	
 	 width: 20px;
-	 height: 38px;
- 	
+	 height: 38px;	
 }
 
 #item_box .item_individual>input[type=text]:focus {
@@ -190,10 +224,6 @@ hr {
 	outline: none;
 }
 
-#item_box .item_individual .disabled {
-	background-color: #fff;
-	outline: none;
-}
 /*
  기타 라벨 이었던 것 
 #item_box .item_individual label{
@@ -223,9 +253,8 @@ hr {
 
 #content .research_content .bottom_box {
 	display: none;
-	bottom: 20px;
-	margin-left: 80%;
-	padding: 0 0 0 18px;
+	margin-left: 85%;
+	padding: 0 0 0 17px;
 }
 
 #content .research_content .active_btn {
@@ -313,7 +342,7 @@ hr {
 .research_content .content_box .research_item{
 	padding:10px 5px 10px 5px;
 }
-.research_content .content_box .research_item input{
+.research_content .content_box .research_item input[type=radio]{
   -webkit-appearance: none;
   border-radius: 50%;
   width: 16px;
@@ -324,6 +353,16 @@ hr {
   margin-right: 5px;
   position: relative;
   top: 4px;
+}
+.research_content .content_box .research_item input[type=text]{
+	box-sizing: border-box;
+	width: 40%;
+	height: 30px;
+	margin-left: 5px;
+	border: none;
+	border-bottom: 2px solid #fff;
+	font-size: 15px;
+	transition: all 0.5s;
 }
 .research_content .content_box .research_item input:checked{
 	border: 8px solid #1428a0;
