--- a/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
@@ -12,7 +12,7 @@ body {
     right: 0;
     top: 0;
     bottom: 0;
-    background: #0C4DA2;
+    background:#1428a0;
     color: #fff;
     font-size: 50px;
     z-index: 10000;
@@ -36,7 +36,7 @@ body {
 
 .container .fixed_box .header .upper {
     width: 100%;
-    background-color: #0C4DA2;
+    background-color:#1428a0;
 }
 
 .container .fixed_box .header .GNB_sub {
@@ -147,7 +147,7 @@ body {
 }
 
 #GNB>ul>li>a:hover, #GNB>ul>li>a:focus {
-    color: #0C4DA2;
+    color:#1428a0;
 }
 
 #GNB ul ul {
@@ -179,7 +179,7 @@ body {
 #GNB ul ul a:hover,
 #GNB ul ul a:focus {
     font-weight: bold;
-    color: #0C4DA2;
+    color:#1428a0;
 }
 
 /* bx-slider 플러그인 커스텀 */
@@ -216,7 +216,7 @@ body {
 }
 
 .bx-wrapper .bx-pager.bx-default-pager a.active {
-    background: #0c4da2;
+    background:#1428a0;
 }
 
 .bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-pager {
@@ -274,7 +274,7 @@ body {
     position: relative;
     display: block;
     width: 100%;
-    color: #0C4DA2;
+    color:#1428a0;
     font-size: 15px;
     font-weight: bold;
 
@@ -362,9 +362,9 @@ body {
     margin: 18px auto;
     font-size: 15px;
     font-weight: bold;
-    color: #0C4DA2;
+    color:#1428a0;
     background: #fff;
-    border: 2px solid #0C4DA2;
+    border: 2px solid#1428a0;
     border-radius: 20px;
     transition: all 0.3s;
 }
@@ -372,7 +372,7 @@ body {
 #content .research_area div[class$="_text"] dl a:hover,
 #content .research_area div[class$="_text"] dl a:focus {
     color: #fff;
-    background: #0C4DA2;
+    background:#1428a0;
 }
 
 #content .ad_zone {
@@ -474,7 +474,7 @@ body {
 }
 
 #content .qreserch_area li:first-child a {
-    background: #0C4DA2;
+    background:#1428a0;
     opacity: 1;
 }
 
