세밀 조절 및 로직 추가

--- a/2. 개발/FreSearch/src/main/webapp/resources/css/research.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/research.css
@@ -351,6 +351,8 @@ select {
     background-color: #fff;
     color: #1428a0;
     font-weight: 700;
+    width: 30.5px;
+    height: 30.5px;
 }
 
 /*content*/
