--- a/2. 개발/FreSearch/src/main/webapp/resources/css/research.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/research.css
@@ -228,19 +228,30 @@ select {
 	padding: 5px;
 	box-sizing: border-box;
 	width: 84%;
-	height: 40px;
-	margin-left: 10px;
-	margin-right: 10px;
+	height: 43px;
+	margin-left: 5px;
+	margin-right: 15px;
 	border: none;
 	border-bottom: 1px solid #fff;
 	font-size: 15px;
 	transition: all 0.5s;
 }
 #item_box .item_individual>input[type=radio]{
-	 width: 20px;
-	 height: 38px;	
+	 -webkit-appearance: none;
+  	 border-radius: 50%;
+	 width: 18px;
+	 height: 18px;
+ 	 border: 2px solid #999;
+	 transition: 0.2s all linear;
+	 outline: none;
+	 margin-top: 8px;
+	 margin-right: 1px;
+	 position: relative;
+	 top: 4px;		 
 }
-
+#item_box .item_individual>input:checked{
+	border: 9px solid #1428a0;
+}
 #item_box .item_individual>input[type=text]:focus {
 	border-bottom: 2px solid #1428a0;
 	outline: none;
@@ -372,7 +383,7 @@ select {
 	background-color: transparent;
 	border: none;
 	color: #fff;
-	width: 50px;
+	width: 45px;
 	height: 33px;
 }
 /*btn img*/
@@ -392,7 +403,7 @@ select {
 	background: url( "/resources/img/bicon10_1.png" ) no-repeat 50% 50%;
 }
 #delete_form{
-	background: url( "/resources/img/bicon03_2.png" ) no-repeat 50% 50%;
+	background: url( "/resources/img/bicon03_2.png" ) no-repeat 50% 40%;
 }
 #item_img{
 	background: url( "/resources/img/bicon09_1.png" ) no-repeat 50% 50%;
@@ -410,6 +421,7 @@ select {
     font-weight: 700;
     width: 30.5px;
     height: 30.5px;
+    margin-left: 1px;
 }
 
 
