--- a/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
@@ -830,6 +830,8 @@ a {
     overflow-x: auto;
     overflow-y: hidden;
     max-height: 48px;
+    padding-top: 18px;
+    padding-bottom: 17px;
 }
 .sub-link__list {
     padding: 0 16px;
