알림 작업중

--- a/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/stats/css/chart.css
@@ -861,9 +861,10 @@ li>a {
     display: block;
     position: absolute;
     right: 0;
-    bottom: 0; 
+    top:0;
     margin-right: 6px;
     margin-bottom: 6px;
+    margin-top: 20px;
 }
 html {
     font-family: Helvetica,Arial,Malgun Gothic,sans-serif;
