--- a/2. 개발/FreSearch/src/main/webapp/resources/css/header.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/header.css
@@ -1,3 +1,6 @@
+
+
+/* 호버했을때 상자 생기는 css */
 .dropbtn {
   background-color: #ea2129;
   color: white;
@@ -58,3 +61,10 @@
 .dropdown:hover .dropdown-content {display: block;}
 
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
+/* 호버했을때 상자 생기는 css 종료 */
+
+
+
+
+
+
