--- a/2. 개발/FreSearch/src/main/webapp/resources/css/info_find.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/info_find.css
@@ -23,8 +23,8 @@ body {
 	/*margin-bottom: 10px;
     color: #1428a0;
     font-weight: bold;
-    font-size: 40px;*/
-    text-align: center;
+    font-size: 40px;
+    text-align: center;*/
 	padding: 3px 0 20px;
 	margin-bottom: 40px;
 }
