--- a/2. 개발/FreSearch/src/main/webapp/resources/css/info_find.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/info_find.css
@@ -9,6 +9,11 @@ body {
 	background: #f4f4f4;
 	display: flex;
 	justify-content: center;
+	margin-top: 2%;
+}
+.page-wrapper .page-logo {
+	position: absolute; 
+	margin-top: 18px;
 }
 .page-wrapper .page-content{
 	background: #fff;
@@ -17,275 +22,181 @@ body {
 	margin: 90px 0;
 }
 .page-wrapper .page-content .page-form{
-	padding: 30px 45px 30px 45px;
+	padding: 30px 45px 55px 45px;
 }
 .page-wrapper .page-content .page-form h2{
-	/*margin-bottom: 10px;
-    color: #1428a0;
-    font-weight: bold;
-    font-size: 40px;
-    text-align: center;*/
 	padding: 3px 0 20px;
-	margin-bottom: 40px;
-}
-.page-wrapper .page-content .page-form .page-form-input label {
-	display: block;
+	border-bottom: 1px solid #d9d9d9; 
+	padding-bottom: 15px; 
 	font-size: 18px;
-	padding-bottom: 10px;
 }
-.page-wrapper .page-content .page-form .page-form-input{
+.page-wrapper .page-content .page-form .email-form {
 	position: relative;
-	margin-bottom: 80px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 27px 40px 0 40px;
+    border-bottom: 1px solid #e7e7e7;
+    margin-bottom: 16px;
 }
-.page-wrapper .page-content .page-form .page-form-checkbox {
-	position: relative;
-	margin-top: -12px;
+.page-wrapper .page-content .page-form .email-form .email-logo-img {
+	width: 260px;
+    height: 97px;
+    margin: 0 auto;
 }
-.page-wrapper .page-content .page-form .page-form-checkbox label{
+.page-wrapper .page-content .page-form .email-form .email-logo-img img {
+	width: 100%;
+    height: auto;
+}
+.page-wrapper .page-content .page-form .email-form .email-msg {
+	padding-top: 28px;
+    text-align: center;
+    font-size: 16px;
+    padding-bottom: 28px;
+}
+.page-wrapper .page-content .page-form .email-form .email-msg .email-msg-first {
+	color: #333;
+    padding-bottom: 13px;
+}
+.page-wrapper .page-content .page-form .email-form .email-msg .email-msg-second {
+	font-size: 13px;
+    line-height: 19px;
+    color: #999;
+}
+.page-wrapper .page-content .page-form .email-form .email-msg .email-msg-second span:nth-child(1) {
+	color: #069fee;
+}
+.page-wrapper .page-content .page-form .page-form-input label,
+.page-wrapper .page-content .page-form .form-row-birth label,
+.page-wrapper .page-content .page-form .form-row label {
+	display: block;
+	padding-left: 10px;
 	font-size: 14px;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
+.page-wrapper .page-content .page-form .page-form-input,
+.page-wrapper .page-content .page-form .form-row,
+.page-wrapper .page-content .page-form .form-row-birth {
+	position: relative;
+	margin-bottom: 75px;
+}
+.page-wrapper .page-content .page-form .form-row-birth .mb_birth_yy input {
+	width: 32%;
+    padding: 8.8px 15px;
+    float: left;
+    margin-right: 10px;
+    border: none;
+    border-bottom : 1px solid #ddd;
+    transition: all 0.1s;
+}
+.page-wrapper .page-content .page-form .form-row-birth .mb_birth_mm { 
+	position: relative; 
+    float: left;
+    width: 32%;
+} 
+.page-wrapper .page-content .page-form .form-row-birth .mb_birth_mm:before { /* 화살표 대체 */ 
+	content: ""; 
+	position: absolute; 
+	top: 50%; 
+	right: 15px; 
+	margin-top: -1px; 
+	border-left: 5px solid transparent; 
+	border-right: 5px solid transparent; 
+	border-top: 5px solid #333; 
+} 
+.page-wrapper .page-content .page-form .form-row-birth .mb_birth_mm select { 
+	width: 100%; 
+	font-family: inherit; /* 폰트 상속 */ 
+	-webkit-appearance: none; /* 네이티브 외형 감추기 */ 
+	padding: 8.9px 15px;
+	font-size: 12px;
+	border: none;
+    border-bottom : 1px solid #ddd;
+    transition: all 0.1s;
+}
+.page-wrapper .page-content .page-form .form-row-birth .mb_birth_dd input {
+	width: 32%;
+    padding: 8.9px 15px;
+    margin-left: 10px;
+    border: none;
+    border-bottom : 1px solid #ddd;
+    transition: all 0.1s;
+    position: absolute;
 }
 .page-wrapper .page-content .page-form .page-form-input input[type=text],
-.page-wrapper .page-content .page-form .page-form-input input[type=password] {
+.page-wrapper .page-content .page-form .form-row input[type=text] {
 	width: 100%;
-	padding : 10.5px 0px 10.5px 2px;
+	padding : 10.5px 0px 10.5px 10px;
     /*padding: 10.5px 15px;*/
     border: none;
     border-bottom : 1px solid #ddd;
     transition: all 0.1s;
     position: absolute;
 }
-.page-wrapper .page-content .page-form .page-form-checkbox input[type=checkbox]{
-	display: none;
-}
-.page-wrapper .page-content .page-form .page-form-checkbox input[type=checkbox] + label{
-	display: inline-block;  
-    cursor: pointer;  
-    position: relative;  
-    padding-left: 25px;  
-    margin-right: 28%;  
-    font-size: 13px;
-	width: 26%;
-}
-.page-wrapper .page-content .page-form .page-form-checkbox input[type=checkbox] + label:before {
-	content: "";  
-    width: 16px;  
-    height: 16px;  
-    position: absolute;  
-    left: 0;  
-    background-color: #fff;  
-    border-radius: 2px; 
-    border: 1px solid #bdc3c9;
-    /*box-shadow: inset 0px 1px 1px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);*/
-}
-.page-wrapper .page-content .page-form .page-form-checkbox input[type=checkbox]:checked + label:before {
-	content: "\2713";
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, .2);  
-    font-size: 14px; 
-    font-weight:800; 
-    color: #fff;  
-    background:#1428a0;
-    text-align: center;  
-    line-height: 18px;
-    border: 0;
-    width: 18px;
-    height: 18px;
-}
-.page-wrapper .page-content .page-form .page-form-input input::placeholder {
+.page-wrapper .page-content .page-form input::placeholder
+ {
 	color: #999;
-	font-size: 16px;
+	font-size: 12px;
 }
 .page-wrapper .page-content .page-form .page-form-input input[type=text]:focus,
-.page-wrapper .page-content .page-form .page-form-input input[type=password]:focus {
+.page-wrapper .page-content .page-form .form-row input[type=text]:focus,
+.page-wrapper .page-content .page-form .form-row-birth .mb_birth_yy input:focus,
+.page-wrapper .page-content .page-form .form-row-birth .mb_birth_mm select:focus,
+.page-wrapper .page-content .page-form .form-row-birth .mb_birth_dd input:focus  {
 	border-bottom: 2px solid #1428a0;
 	outline: none;
 }
-.page-wrapper .page-content .page-form .page-form-login {
+.page-wrapper .page-content .page-form .form-submit {
 	text-align: center;
-    margin-top: 12%;
 }
-.page-wrapper .page-content .page-form .page-form-login .login {
-	width: 245px;
-    height: 50px;
-    background: #fff;
-    border-radius: .5em;
-    border: 2px solid #1428a0;
+.page-wrapper .page-content .page-form .form-submit .emailFind {
+	font-size: 16px;
+    color: #fff;
+    background: #1428a0;
+    border-radius: 5px;
+    width: 28%;
+    height: 45px;
+    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.2);
+    border: none;
+    /* margin: 26px 142px 0; */
+    cursor: initial;
+    opacity: 0.5;
+    margin-top: 20px;
+}
+.page-wrapper .page-content .page-form .form-pwd-find {
+	position: relative;
+    padding-top: 4px;
+    padding-left: 12px;
+}
+.page-wrapper .page-content .page-form .form-pwd-find .pwdText {
+	color: #999;
+    position: relative;
+    padding-left: 10px;
+    font-size: 12px;
+}
+.page-wrapper .page-content .page-form .form-pwd-find .pwdButton {
+	margin-right: 20px;
+    margin-top: -2px;
+    float: right;
+    font-size: 12px;
+    color: #666;
+    line-height: 1;
+    font-weight: normal;
+    border: 1px solid #d1d1d1;
+    background: none;
     cursor: pointer;
-    font-weight: bold;
-    font-size: 16px;
-}
-.page-wrapper .page-content .page-form .page-form-googleLogin {
-	text-align: center;
-    margin-top: 4%;
-}
-.page-wrapper .page-content .page-form .page-form-googleLogin .googleLogin {
-	border-radius: .5em;
-    border: 2px solid #1428a0;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 16px;
-    padding: 13px 27px;
-}
-.page-wrapper .page-content .page-form .page-form-googleLogin .googleLogin span{
-	display: inline-block;
-    background: url(/resources/img/google.PNG);
-    background-size: 18px 20px;
-    width: 18px;
-    height: 20px;
-    vertical-align: middle;
-    margin-bottom: 2px;
-    /* margin-right: 6px; */
-}
-/*
-.page-wrapper .page-content .page-form .page-form-link {
-	border-top: 1px solid #e4e4e5;
-    padding-top: 20px;
-    text-align: center;
-    color: #8e8e8e;
-    margin-top: 5%;
-}
-.page-wrapper .page-content .page-form .page-form-link a {
-	font-size: 12px;
-    line-height: 13px;
-    display: inline-block;
-    text-decoration: none;
-    color: #8e8e8e;
-}
-.page-wrapper .page-content .page-form .page-form-link span {
-	margin: 0 4px;
-    display: inline-block;
-    width: 1px;
-    height: 13px;
-    text-indent: -999em;
-    background: #e4e4e5;
-}*/
-.page-wrapper .page-content .page-form .page-form-checkbox a {
-	font-size: 12px;
-    line-height: 13px;
-    display: inline-block;
-    text-decoration: none;
-    color: #8e8e8e;
-    margin-top: 3px;
-}
-
-.page-wrapper .page-content .page-form .page-form-input #pwd_check {
-	position: absolute;
-    margin-top: 40px;
-    color : #d0021b;
-}
-.page-wrapper .page-content .page-form .page-form-checkbox span {
-	margin: 0 4px;
-    display: inline-block;
-    width: 1px;
-    height: 13px;
-    text-indent: -999em;
-    background: #e4e4e5;
-    margin-top: 3px;
+    box-sizing: border-box;
+    border-radius: 3px;
+    padding: 4px 10px;
 }
 .check {
 	position: absolute;
     margin-top: 40px;
+    margin-left: 6px;
+    font-size: 12px;
 }
 @media screen and (max-width: 767px) {
 	.page-content {
 	    margin: 175px 20px;
 	}
 }
-
-
-
-/*
-body{ 
-         text-align: center; 
-         display: block; 
-         margin: 0 auto; 
-         font-size: 16px; 
-         color: #999; 
-     } 
-     h1{ 
-         font-family: 'Oswald', sans-serif; 
-         font-size: 30px; 
-         color: #216182; 
-     } 
-     label { 
-         display: block; 
-         margin-top: 20px; 
-         letter-spacing: 2px; 
-     } 
-     form { 
-         margin: 0 auto; 
-         width: 459px; 
-     } 
-     
-     textarea{ 
-         height: 60px; 
-         background-color: #efefef; 
-     } 
-     #submit{ 
-         width: 127px; 
-         height: 48px; 
-         text-align: center; 
-         border: none; 
-         margin-top: 20px; 
-         cursor: pointer; 
-     } 
-     #submit:hover{ 
-         color: #fff; 
-         background-color: #216282; 
-         opacity: 0.9; 
-     } 
-     #cancel { 
-         width: 127px; height: 48px; 
-         text-align: center; 
-         border: none; 
-         margin-top: 20px; 
-         cursor: pointer; 
-     } 
-     #cancel:hover{ 
-         color: #fff; 
-         background-color: #216282; 
-         opacity: 0.9; 
-     }
-
-    .modal { 
-         position: fixed; 
-         left: 0; 
-         top: 0; 
-         width: 100%; 
-         height: 100%; 
-         background-color: rgba(0, 0, 0, 0.5); 
-         opacity: 0; 
-         visibility: hidden; 
-         transform: scale(1.1); 
-         transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s; 
-     } 
-     .modal-content { 
-         position: absolute; 
-         top: 50%; 
-         left: 50%; 
-         transform: translate(-50%, -50%); 
-         background-color: white; 
-         padding: 1rem 1.5rem; 
-         width: 500px; 
-         height: 350px; 
-         border-radius: 0.5rem; 
-     } 
-     .close-button { 
-         float: right; 
-         width: 1.5rem; 
-         line-height: 1.5rem; 
-         text-align: center; 
-         cursor: pointer; 
-         border-radius: 0.25rem; 
-         background-color: lightgray; 
-     } 
-     .close-button:hover { 
-         background-color: darkgray; 
-     } 
-     .show-modal { 
-         opacity: 1; 
-         visibility: visible; 
-         transform: scale(1.0); 
-         transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s; 
-     } 
-     
-    */
