--- a/2. 개발/FreSearch/src/main/webapp/resources/css/signup.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/signup.css
@@ -10,21 +10,29 @@ body {
 	display: flex;
 	justify-content: center;
 }
+.page-content h2 {
+	position: absolute;
+    margin-top: 46px;
+}
 .form-content {
 	background: #fff;
 	width: 670px;
 	border-radius: 8px;
-	margin: 90px 0;
+	margin: 115px 0;
 }
 .form-detail {
 	padding: 30px 45px 30px 45px;
 }
 .form-detail h2 {
 	/*position: relative;
-	font-size: 25px;*/
+	font-size: 25px;
 	text-align: center;
 	padding: 3px 0 20px;
-	margin-bottom: 40px;
+	margin-bottom: 40px; */
+	margin: auto;
+    border-bottom: 1px solid #d9d9d9;
+    width: 579px;
+    padding-bottom: 13px;
 }
 /*
 .form-detail h2::after {
@@ -96,6 +104,7 @@ body {
 .form-row-birth {
 	position: relative;
 	margin-bottom: 80px;
+	margin-top: 78px;
 }
 
 .form-row-category {
